<resources>
    <string name="app_name">Mercearia</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="logo">Logo</string>
    <string name="coloque_o_seu_neg_cio_nos_trilhos">Coloque o seu negócio nos trilhos</string>
    <string name="a_tua_informa_o_segura_e_em_tempo_real">A tua informação segura e em tempo real</string>

    <string name="valor_arrecadado">Confira o valor arrecadano nas suas vendas</string>
    <string name="bank">Bank</string>
    <string name="meticais">Meticais</string>
    <string name="balanco">Balanço</string>
    <string name="pesquisar">Toque para pesquisar o producto</string>
    <string name="quantidade_remanescente">Quantidade remanescente</string>
    <string name="stock">Stock</string>
    <string name="debitar">Debitar</string>
    <string name="balanceie_stock">Balanceie o seu stock de acordo com a sua realidade</string>

    <string name="acessar">Acessar</string>
    <string name="quntidade_vendida">Quntidade Vendida:</string>
    <string name="preco_de_venda">Preco de Venda:</string>
    <string name="preco_da_compra">Preço da Compra:</string>
    <string name="quantidade_inicial">Quantidade Inicial:</string>
    <string name="valor_em_caixa">Valor em caixa:</string>
    <string name="adicionado_a">Adicionado a:</string>
    <string name="reiniciar_o_balcao">Reiniciar o balcão</string>
    <string name="senha">Senha</string>
    <string name="registar">Registar</string>
    <string name="e_mail">e-mail</string>
    <string name="codigo_de_seguranca">Código de Segurança</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="produtos">Produtos</string>
    <string name="sair">Sair</string>
    <string name="historico">Histórico</string>
    <string name="meu_banco">Meu Banco</string>

    <string name="precisa_conexao">Precisa estar connectado a internet</string>
    <string name="nome_do_producto">Nome do producto</string>
    <string name="preco_a_vender_por_cada">Preço a vender por cada</string>
    <string name="quantidade_total">Quantidade total</string>
    <string name="registar_produto">Registar Produto</string>
    <string name="preco_de_compra">Preço de Compra</string>

</resources>
