<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/vendas"
            android:icon="@drawable/ic_balance"
            android:title="@string/balanco" />

        <item
            android:id="@+id/historico"
            android:icon="@drawable/ic_medical_history"
            android:title="@string/historico" />


        <item
            android:id="@+id/bank"
            android:icon="@drawable/ic_smartphone"
            android:title="@string/meu_banco" />


        <item
            android:id="@+id/novo_prduto"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/novo_produto" />

        <item
            android:id="@+id/productos"
            android:icon="@drawable/ic_list"
            android:title="@string/produtos" />

        <!--<item-->
            <!--android:id="@+id/logout"-->
            <!--android:icon="@drawable/ic_exit"-->
            <!--android:title="@string/sair" />-->

    </group>

</menu>
